--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   },
